--- a/index.html
+++ b/index.html
@@ -9,12 +9,71 @@
     <link rel="shortcut icon" href="/assets/images/favicon.png">
     <!-- bootstrap link -->
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <!-- bootstrap icons -->
+    <link rel="stylesheet" href="/bootstrap-icons/font/bootstrap-icons.css">
     <!-- own css -->
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     
-     
+<!-- header section -->
+<header>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="/assets/images/ecommerce-logo-png-11.png" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-2">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Categories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shop</a>
+              </li>
+            </ul>
+              <ul class="navbar-nav ms-auto mb-2  mb-lg-0 action-menu">
+                <form class="search-form">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="search-btn"  type="submit">Search</button>
+                  </form>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class="bi bi-heart"></i>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class="bi bi-cart4 position-relative">
+                            <span style="font-size: 12px" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">5</span>
+                        </i>  
+                    </a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <i class="bi bi-person"></i>
+                    </a>
+                    <ul class="dropdown-menu border-0 shadow-lg">
+                      <li><a class="dropdown-item" href="#">Registration</a></li>
+                      <li><a class="dropdown-item" href="#">Login</a></li>
+                    </ul>
+                  </li>
+              </ul>
+          </div>
+        </div>
+      </nav>
+</header>
+
+
+
+
+
 
     <!-- bootstrap js -->
     <script src="/assets/js/bootstrap.bundle.js"></script>
